src/snapshots/near_enhanced_api__rpc_api__tests__ft_metadata_no_contract_deployed.snap
---
source: src/rpc_api.rs
expression: metadata
---
Err(
    Error {
        code: 400,
        message: "Invalid Input: The account `olga.near` does not implement the desired contract at block 68000000",
        retriable: false,
    },
)
