src/snapshots/near_enhanced_api__rpc_api__tests__nft_contract_metadata_broken_contract.snap
---
source: src/rpc_api.rs
expression: metadata
---
Err(
    Error {
        code: 500,
        message: "Contract Error: The contract did not provide NFT Metadata which is a required part of NFT NEP 171",
        retriable: true,
    },
)
