src/snapshots/near_enhanced_api__rpc_api__tests__nft_general_metadata_other_contract_deployed.snap
---
source: src/rpc_api.rs
expression: metadata
---
Err(
    Error {
        code: 400,
        message: "Invalid Input: The account `usn` does not implement the desired contract at block 68000000",
        retriable: false,
    },
)
